<resources>
    <string name="app_name">Nawa</string>

    <string name="network_not_good">network not good</string>
    <string name="wallpaper">wallpaper</string>
    <string name="music">Music</string>
    <string name="downloads">downloads</string>
    <string name="setting">setting</string>
    <string name="watch_mv">watch mv</string>
    <string name="menu">menu</string>
    <string name="play">play</string>
    <string name="back">back</string>
    <string name="album_cover">album cover</string>
    <string name="music_library">Music library</string>
    <string name="album">album</string>
    <string name="video">video</string>
    <string name="image">image</string>
    <string name="sort">sort</string>
    <string name="sort_type">Sort type</string>
    <string name="created_time">Created time</string>
    <string name="separator_text">------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</string>
    <string name="separated_by_time">separated by time</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="edited_time">Edited time</string>
    <string name="descending_order">Descending order</string>
    <string name="ascending_order">Ascending order</string>
    <string name="accessed_time">Accessed time</string>
    <string name="next">next</string>
    <string name="list">list</string>
    <string name="player_background">player background</string>
    <string name="slider">separator</string>
    <string name="pointer">pointer</string>
    <string name="review_storage">Grant permissions to continue</string>
    <string name="repeat_enabled">Single repetition on.</string>
    <string name="repeat_loop_enabled">∞ repeat on.</string>
    <string name="repeat_disabled">∞ repeat off.</string>

    <!-- Messages - Errors -->
    <string name="open_git_pref_summary">Open the project webpage for more info :)</string>
    <string name="open_details_fragment">Open artist/folder\'s details</string>
    <string name="error_no_favorites">Add some favorites first.</string>
    <string name="error_no_music">Add some music first.</string>
    <string name="error_not_ready">Could not load the music library! :( Unmounting the SD card rebuilds the Android MediaStore database. Try again later.</string>
    <string name="error_unknown_unsupported">Something went wrong! :( Perhaps the format is unsupported, or the folder is inaccessible (not the app\'s fault!).</string>
    <string name="error_no_browser">Install a web browser first.</string>
    <string name="error_bad_id">Play a song first.</string>
    <string name="error_no_queue">No songs in queue.</string>
    <string name="error_list_ended">List ended.</string>
    <string name="error_builtin_eq">An error occurred! Use the system equalizer (if it exists)!</string>
    <string name="error_sys_eq">System equalizer not available!</string>
    <string name="error_fs_not_allowed_sum">Error! Turn off battery optimization for MPGO</string>
    <string name="error_fs_not_allowed">Something went wrong! :( Consider turning off battery optimization in the system settings: Apps &gt; All apps &gt; Music Player GO &gt; Battery &gt; Unrestricted, as it could cause the media player service to stop.</string>
    <string name="text_artist">Artist</string>
    <string name="text_artist_image">Artist image</string>
    <string name="text_songs">Songs</string>
    <string name="text_song_name">song name</string>
    <string name="text_play_list">Play list</string>
    <string name="text_list_name">list name</string>
    <string name="text_recent">Recent</string>
    <string name="text_recent_name">recent name</string>
    <string name="text_create">create</string>
    <string name="text_albums">Albums</string>
</resources>