<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <ImageView android:layout_width="32dp" android:layout_height="32dp"
               android:id="@+id/back" android:background="@drawable/ic_back"
               app:layout_constraintTop_toTopOf="@id/title"
               app:layout_constraintStart_toStartOf="parent"
               android:contentDescription="@string/back"
               app:layout_constraintBottom_toBottomOf="@id/title"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/title"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toEndOf="@id/back"
              tools:text="title"
              android:textColor="@color/white"
              android:textSize="24sp"
              android:textStyle="bold"
              android:layout_marginTop="8dp"
              android:layout_marginStart="8dp"/>
    <ImageView android:layout_width="38dp"
               android:layout_height="38dp"
               android:id="@+id/menu"
               app:layout_constraintTop_toTopOf="@id/title"
               app:layout_constraintBottom_toBottomOf="@id/title"
               app:layout_constraintEnd_toEndOf="parent"
               android:contentDescription="@string/menu"
               android:padding="8dp"
               android:layout_marginEnd="16dp"
               android:src="@drawable/ic_menu"/>
    <FrameLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="22dp"
            android:layout_marginStart="16dp"
            android:id="@+id/play"
            android:layout_width="36dp"
            android:layout_height="36dp">
        <ImageView android:layout_width="16dp" android:layout_height="16dp"
                   android:contentDescription="@string/play"
                   android:layout_gravity="center"
                   android:id="@+id/play_img"
                   android:background="@drawable/ic_play"/>
    </FrameLayout>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:id="@+id/seekbar"
            android:max="100"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="124dp"
            app:layout_constraintStart_toEndOf="@id/play"
            app:layout_constraintBottom_toBottomOf="@id/play"
            app:layout_constraintTop_toTopOf="@id/play"
            android:progressDrawable="@drawable/seekbar_bg"
            android:thumb="@null"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/duration" android:textColor="@color/white"
              android:textSize="14sp" app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toBottomOf="@id/play"
              app:layout_constraintTop_toTopOf="@id/play"
              android:layout_marginEnd="16dp" tools:text="12:10"/>
</androidx.constraintlayout.widget.ConstraintLayout>