<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable name="preference" type="com.saidim.nawa.media.pref.Preference"/>
        <variable name="viewModel" type="com.saidim.nawa.view.viewModels.MainViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scroll_view">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:visibility="@{preference.enableDisplayArtistsInMainWindow ? View.VISIBLE : View.GONE}"
                        android:id="@+id/artist_layout">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_artist"
                            android:id="@+id/artist_text"
                            android:textSize="22sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textColor="?attr/colorOnPrimaryContainer"/>

                    <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/artist_text"
                            android:id="@+id/artists_list"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            android:orientation="horizontal"
                            tools:listitem="@layout/layout_item_artist"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:id="@+id/songs_layout">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_songs"
                            android:id="@+id/songs_text"
                            android:textSize="22sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textColor="?attr/colorOnPrimaryContainer"/>

                    <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/songs_text"
                            android:id="@+id/songs_list"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            android:orientation="horizontal"
                            tools:listitem="@layout/layout_item_song"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:visibility="@{preference.enableDisplayRecentInMainWindow ? View.VISIBLE : View.GONE}"
                        android:id="@+id/recent_layout">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_recent"
                            android:id="@+id/recent_text"
                            android:textSize="22sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textColor="?attr/colorOnPrimaryContainer"/>

                    <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/recent_text"
                            android:id="@+id/recent_list"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            android:orientation="horizontal"
                            tools:listitem="@layout/layout_item_recent"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="16dp"
                        android:paddingHorizontal="8dp"
                        android:id="@+id/play_list_layout">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_play_list"
                            android:id="@+id/play_list_text"
                            android:textSize="22sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textColor="?attr/colorOnPrimaryContainer"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_create"
                            android:id="@+id/play_list_create"
                            android:textAllCaps="true"
                            android:backgroundTint="?attr/colorPrimary"
                            android:background="@drawable/bg_corner_white_3dp"
                            android:textSize="16sp"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="2dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textColor="?attr/colorOnPrimary"/>

                    <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/play_list_text"
                            android:id="@+id/play_list"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            tools:listitem="@layout/layout_item_play_list"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>