<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.saidim.nawa.R"/>
        <import type="com.saidim.nawa.view.enums.PlayState"/>
        <import type="com.saidim.nawa.view.enums.PlayerViewState"/>
        <import type="android.view.View"/>
        <variable name="state" type="com.saidim.nawa.view.viewModels.MusicViewModel"/>
        <variable name="viewModel" type="com.saidim.nawa.view.viewModels.MusicPlayerViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="88dp">
        <com.saidim.nawa.view.views.FluidView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:id="@+id/fluid_view"/>

        <com.saidim.nawa.view.lyric.LrcScrollView
                android:layout_width="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/lyrics_view"
                android:visibility="gone"
                android:layout_marginTop="88dp"
                app:layout_constraintBottom_toTopOf="@id/controller"/>

        <ImageView
                android:layout_width="48dp"
                android:layout_height="16dp"
                android:id="@+id/button"
                android:alpha="0"
                app:layout_constraintBottom_toTopOf="@id/album"
                android:contentDescription="@string/slider"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_separator"/>

        <com.google.android.material.card.MaterialCardView
                android:layout_width="56dp"
                android:layout_height="56dp"
                app:cardCornerRadius="4dp"
                android:elevation="32dp"
                app:layout_constraintTop_toBottomOf="@id/button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="16dp"
                android:layout_gravity="center"
                android:id="@+id/album">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:background="?attr/colorPrimary"
                    android:id="@+id/album_cover"
                    android:contentDescription="@string/album_cover"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:ellipsize="end"
                android:lines="1"
                tools:text="I don't even know your name"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="@id/album"
                app:layout_constraintBottom_toBottomOf="@id/album"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="88dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/music_name"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp"
                android:paddingHorizontal="32dp"
                android:paddingVertical="32dp"
                android:id="@+id/controller">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Fallen' All In You - The shawn Mendes foundation"
                    android:textColor="@color/white"
                    android:id="@+id/song_name"
                    android:textSize="28sp"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    android:lines="1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/singer_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/song_name"
                    tools:text="Shawn mendes"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@id/singer_name"
                    android:background="@drawable/bg_corner_white_3dp"/>

            <View
                    app:layout_constraintTop_toBottomOf="@id/singer_name"
                    android:id="@+id/seekbar"
                    android:layout_height="6dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="wrap_content"/>

            <ImageButton
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:layout_constraintTop_toBottomOf="@id/seekbar"
                    android:background="@drawable/ic_play"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/play"/>

            <ImageButton
                    android:layout_width="54dp"
                    android:layout_height="32dp"
                    app:layout_constraintTop_toBottomOf="@id/seekbar"
                    android:background="@drawable/ic_pre"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:contentDescription="@string/play"/>

            <ImageButton
                    android:layout_width="54dp"
                    android:layout_height="32dp"
                    app:layout_constraintTop_toBottomOf="@id/seekbar"
                    android:background="@drawable/ic_next"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/play"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>